--- a/views/expense.html
+++ b/views/expense.html
@@ -3,99 +3,207 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://cdnjs.cloudflare.com; https://cdn.jsdelivr.net; https://checkout.razorpay.com;"> -->
-    <title>Expense Tracker</title>
-
+    <title>ExpendEase</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/randomcolor@0.6.2/randomColor.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     
-    <link href="../public/css/main.css" rel="stylesheet">
+    <link href="../public/css/mainNew.css" rel="stylesheet">
 </head>
 <body>
-    <div id="header-top">
-        <div class="header">
-            <div id="header-logo"><h1>Expense Tracker</h1></div>
-            <div id="premiumTag"><h5>Premium</h5></div>
+    <div class="outer container-fluid bg-dark-subtle text-light min-vh-100 d-flex align-items-center justify-content-center">
+        <div class="inner container bg-light text-dark w-75">
+            <div class="header row">
+                <div class="col mt-auto mb-auto" id="header-top">
+                    <div class="header d-flex align-items-center float-start ">
+                        <div id="header-logo" class="text-dark fst-italic fs-2 ms-3"><h2>ExpendEase</h2></div>
+                        <div id="premiumTag" class="ms-1 text-danger mt-3"><h5>Premium</h5></div>
+                    </div>
+                </div>
+                <div class="col mt-auto mb-auto">
+                    <div class="d-flex align-items-center float-end ">
+                        <h4 id="profilename" class="mt-auto mb-auto"></h4>
+                        <div class="dropdown bg-light">
+                            <i class="fa fa-user-circle-o me-3 btn btn-secondary dropdown-toggle bg-light text-dark border-0" data-bs-toggle="dropdown" aria-expanded="false" style="font-size:35px"></i>
+                            <ul class="dropdown-menu dropdown-menu-end bg-light-subtle ">
+                              <li><a class="dropdown-item" href="#" onclick="userLogout()">SignOut</a></li>
+                            </ul>
+                          </div>
+                    </div>
+                </div>
+            </div><hr class="m-0 ">
+
+            <div class="navigation row">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-0 pb-0 container-fluid">
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav me-auto ms-3" id="premiumFeatures">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" onclick="switchview(loadExpensePage)">Add Expense</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+            <div class="content row bg-info">
+                <div class="expense container row bg-light m-0">
+                    <div class="left col-md-6 border-end ">
+                        <form id="ExpenseForm" class="p-5">
+                            <!-- <div class="header-text mb-4">
+                                <h4>Welcome back, 🤗</h4>
+                                <small>Sign in to your account and continue your journey with us.</small>
+                            </div> -->
+                            <div class="input-group mb-3">
+                                <input type="number" name="amount" id="amt" min="1" class="form-control form-control-lg bg-light fs-6" placeholder="Expense Amount" required>
+                            </div>
+                            <div class="input-group mb-3">
+                                <input type="text" name="description" id="descr" class="form-control form-control-lg bg-light fs-6" placeholder="Expense Description" required>
+                            </div>   
+                            <div class="input-group mb-3">
+                                <select name="category" id="cat"  class="form-select form-select-lg bg-light fs-6" placeholder="Select Category" required>
+                                    <option class="catOption">Select Category</option>
+                                    <option class="catOption">Electricity</option>
+                                    <option class="catOption">Fuel</option>
+                                    <option class="catOption">Food</option>
+                                    <option class="catOption">Fitness</option>
+                                    <option class="catOption">Medical</option>
+                                    <option class="catOption">Movie</option>
+                                    <option class="catOption">Shopping</option>
+                                    <option class="catOption">Travel</option>
+                                    <option class="catOption">Others</option>
+                                </select>
+                            </div>   
+                            <div class="input-group mb-1 justify-content-center">
+                                <button id="submit" class="submitBtn btn btn-lg btn-primary w-100 fs-6">Add Expense</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="right col-md-6 fs-6 ">
+                        <div class="pt-5 ps-3 pe-3">
+                            <div class="row mb-3 d-flex justify-content-center ">
+                                <div class="col d-flex mb-1 ">
+                                    <label for="date-picker" class="col-form-label-sm me-1">Date: </label>
+                                    <input type="date" id="date-picker" class="form-control-sm">
+                                </div>
+                                <div class="col dynamicPagingContainer">
+                                    <label for="dynamicPage" class="form-label ">Rows per page: </label>
+                                    <select name="dynamicPage" id="dynamicPage" class="form-control-sm">
+                                        <option class="pageOption">2</option>
+                                        <option class="pageOption">4</option>
+                                        <option class="pageOption">6</option>
+                                        <option class="pageOption">8</option>
+                                        <option class="pageOption">10</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="expenseTable row form-group mb-1">
+                                <table id="expenseTable" class="table table-sm table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>Amount</th>
+                                            <th>Category</th>
+                                            <th>Description</th>
+                                            <th></th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="expense-tbody">
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div id="pageContainer-expense" class="d-flex justify-content-center ">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="leaderboard container row bg-light m-0 inactive">
+                    <div class="left col-md-6 p-5">
+                        <div class="container d-flex justify-content-around  ">
+                            <button class="btn btn-dark " onclick="getLeaderboard(1,event); getUserStats(event);">All Time</button>
+                            <button class="btn btn-dark " onclick="getLeaderboard(1,event); getUserStats(event);">Yearly</button>
+                            <button class="btn btn-dark " onclick="getLeaderboard(1,event); getUserStats(event);">Monthly</button>
+                        </div>
+                        <div class="leaderboardContainer row form-group mt-5 mb-1 ps-3 pe-3">
+                            <table id="leaderBoardTable" class="table table-sm  table-hover justify-content-center">
+                                <thead>
+                                    <tr>
+                                        <th>Rank</th>
+                                        <th>Username</th>
+                                        <th>Total Spends</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="leaderboard-tbody">
+                                </tbody>
+                            </table>
+                            <div id="pageContainer-leaderboard" class="d-flex justify-content-center ">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right col-md-6 ">
+                        <canvas id="myChart" class="bg-dark-subtle mt-5   "></canvas>
+                        <hr>
+                        <div class="container">
+                            <h3>Your Stats</h3>
+                            <h4 id="user-expense-total"></h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="report container row bg-light m-0 inactive">
+                    <div class="left col-md-6 border-end p-5 ">
+                        <div class="container d-flex justify-content-around  ">
+                            <div class="container">
+                                <div class="form-check form-check-inline mb-3">
+                                    <input class="form-check-input" type="radio" id="monthly" name="interval" value="monthly" onclick="toggle_date(event)" checked>
+                                    <label class="form-check-label" for="monthly">Monthly</label>
+                                  </div>
+                            
+                                  <div class="form-check form-check-inline mb-3">
+                                    <input class="form-check-input" type="radio" id="yearly" name="interval" onclick="toggle_date(event)" value="yearly">
+                                    <label class="form-check-label" for="yearly">Yearly</label>
+                                  </div>
+                            
+                                  <div class="form-group ml-3 datepickercontainer mb-3">
+                                    <label for="datePicker">Select Month:</label>
+                                    <input type="month" class="form-control" id="datePicker" name="month" required>
+                                  </div>
+                            
+                                  <button type="button" class="btn btn-primary mt-2 mb-3" onclick="generatereport()">Generate</button>
+                                  <button type="button" class="btn btn-primary ms-3 mt-2 mb-3" onclick="downloadReport()">Download</button>
+
+                                  <!-- <object id="fgh" data="https://xpense-tracker-app.s3.amazonaws.com/expense_65bb7f1e34ad1778f5820300_Tue%20Feb%2006%202024%2004%3A45%3A57%20GMT%2B0530%20%28India%20Standard%20Time%29.csv"  width="100%" height="400"></object> -->
+                                  <iframe id="iframe" src="" width="100%" height="200px" frameborder="1"></iframe>  
+                                  <!-- <iframe id="iframe" src="" width="100%" height="400" style="border:1px solid black;"> -->
+                                <!-- </iframe> -->
+                                <!-- https://view.officeapps.live.com/op/embed.aspx?src= -->
+                                <!-- https://xpense-tracker-app.s3.amazonaws.com/expense_65bb7f1e34ad1778f5820300_Tue%20Feb%2006%202024%2004%3A45%3A57%20GMT%2B0530%20%28India%20Standard%20Time%29.csv -->
+                              </div>
+                            
+                        </div>
+                    </div>
+                    <div class="right col-md-6 ">
+                        <canvas id="piechart" class="bg-light ps-5"></canvas>
+                        <div id="totalexpense" class="d-flex container justify-content-center mt-5 "></div>
+                        <hr>
+                        <canvas id="linechart" class="bg-light mt-3"></canvas>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+  
+    <script>
 
-    <hr>
-
-    <!-- Expense Tracker Form -->
-    <div id="premiumFeatures">
-        <!-- <button id="expensePageBtn" onclick="getLeaderboard()" >Add Expense</button> -->
-    </div>
-    
-    <hr>
-    <br>
-    <div class="addExpenseContainer">
-        <form id="ExpenseForm" class="authContainer-form">
-            <table id="Expensetable" class="authContainer-table">
-                <tr class="table_row">
-                    <td class="table_data"><label for="amt" class="labels">Expense Amount: </label><td>
-                </tr>
-                <tr class="table_row">
-                    <td class="table_data"><input type="number" name="amount" id="amt" min="1" required></td>
-                </tr>
-                <tr class="table_row">
-                    <td class="table_data"><label for="descr" class="labels">Choose Description: </label></td>
-                </tr>
-                <tr class="table_row">
-                    <td class="table_data"><input type="text" name="description" id="descr" required></td>
-                </tr>
-                <tr class="table_row">
-                    <td class="table_data">
-                        <label for="cat" class="labels">Choose Category: </label>
-                        <select name="category" id="cat" required>
-                            <option class="catOption">Fuel</option>
-                            <option class="catOption">Food</option>
-                            <option class="catOption">Movie</option>
-                            <option class="catOption">Electricity</option>
-                            <option class="catOption">Others</option>
-                        </select>
-                    </td>
-                </tr>
-                <tr class="table_row">
-                    <td class="table_data"><button id="submit">Add Expense</button></td>
-                </tr>
-            </table>
-        </form>
-    </div>
-
-    <br>
-    <hr>
-
-    <div class="dynamicPagingContainer">
-        <label for="dynamicPage">Rows per page: </label>
-        <select name="dynamicPage" id="dynamicPage" required>
-            <option class="pageOption">2</option>
-            <option class="pageOption">4</option>
-            <option class="pageOption">6</option>
-            <option class="pageOption">8</option>
-            <option class="pageOption">10</option>
-        </select>
-    </div>
-
-    <!-- Add expenses here -->
-    <div id="expensesContainer">
-        <table id="expenseTable"></table>
-    </div>
-    <div id="pageContainer"></div>
-
-    <hr>
-
-    <!-- <ul id="leaderboardContainer"></ul> -->
-    <div id="leaderboardHeader"></div>
-    <div id="leaderboardContainer">
-        <table id="leaderBoardTable"></table>
-    </div>
+    </script>
 
     <!-- JS for the backend logic -->
     <script src="../public/js/expense.js"></script>
     <script src="../public/js/membership.js"></script>
     <script src="../public/js/premiumFeatures.js"></script> 
 </body>
-
 </html>
