--- a/views/reset-password.html
+++ b/views/reset-password.html
@@ -3,29 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Password</title>
+    <title>ExpendEase</title>
+    <link rel="icon" type="image/x-icon" src="..public/image/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
 
 </head>
 <body>
+    <div class="container-fluid p-0">
+        <div class="box text-dark p-5 m-auto shadow d-flex flex-column justify-content-center" style="height:350px; max-width: 600px">
+            <div class="header-text mb-4">
+                <h4>Welcome back! 👋</h4>
+                <p>Let's get you back in control. </p>
+            </div>
+            <form class="form-group d-flex flex-column justify-content-center" id="passwordResetForm">
+                <label for="password" class="form-label">New password: </label>
+                <input type="password" name="password" id="password" class="form-control fs-6 mb-3" placeholder="type your password here.." required>
+                <button class="btn btn-primary mb-3" id="submit">reset password</button>
+                <div class="mb-5">
+                    Go back to <a class="">login</a>
+                </div>
+            </form>
+        </div>
+        </div>
+    </div>
     <br>
-    <form id="passwordResetForm">
-        <label for="password" class="labels">Enter your new password: </label>
-        <input type="password" name="password" id="password" required>
-        <input type="submit" id="submit" value="reset password"><br>
-        <a href="http://localhost:5501/views/login.html">Go back to login</a><br>
-    </form>
-
     <!-- <script src="../public/js/reset_password.js"></script> -->
     <script>
         const passwordResetForm = document.getElementById("passwordResetForm");
         const newPassword = document.getElementById("password");
         passwordResetForm.addEventListener('submit',passwordReset);
 
-        const BACKEND_ADDRESS = 'localhost:3000';
-        document.getElementsByTagName('a')[0].href = `http://${BACKEND_ADDRESS}/login.html`;
+        const BACKEND_ADDRESS = 'http://localhost:3000';
+        document.getElementsByTagName('a')[0].href = `${BACKEND_ADDRESS}/home.html`;
 
         async function passwordReset(e){
             try{
@@ -34,10 +45,10 @@
                     return alert('kindly fill the new password field');
                 }
                 const resetId= window.location.href.split('/').pop();
-                const response = await axios.patch(`http://${BACKEND_ADDRESS}/password/update/`,{newPassword: newPassword.value, requestId: resetId});
+                const response = await axios.patch(`${BACKEND_ADDRESS}/password/update/`,{newPassword: newPassword.value, requestId: resetId});
                 if(response.status === 200){
                     alert(response.data.message);
-                    return window.location.href = `http://${BACKEND_ADDRESS}/signin.html`;
+                    return window.location.href = `${BACKEND_ADDRESS}/home.html`;
                 }
             }
             catch(err){
